compiler/src/test/resources/golden/errors/string_raw_unterminated.dawn
pub fn main() -> Unit !io = {
  println(`never closed)
}
