compiler/src/test/resources/golden/errors/string_raw_unterminated.err
error: unterminated raw string
  --> string_raw_unterminated.dawn:2:11
  |
2 |   println(`never closed)
  |           ^
  = hint: raw strings run to the next backtick; they cannot contain one
error: expected `}`, found `<eof>`
  --> string_raw_unterminated.dawn:4:1
  |
4 | 
  | ^
error: expected an expression, found `<eof>`
  --> string_raw_unterminated.dawn:4:1
  |
4 | 
  | ^
